samples/_failures_safe/1761411127_df9bd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b78117d5.c: In function ‘main’:
./samples/SAFE/__tmp_b78117d5.c:154:13: error: expected declaration or statement at end of input
  154 |             case 2:
      |             ^~~~
./samples/SAFE/__tmp_b78117d5.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b78117d5.c:154:13: error: expected declaration or statement at end of input
